--- a/latex/main.tex
+++ b/latex/main.tex
@@ -209,7 +209,7 @@ En af de mest accepterede udledninger af Fitts' lov stammer fra modellen \emph{d
 \label{fig:MacKenziePlot1}
 \end{figure}
 MacKenzie beskriver, at et af problemerne med Fitts' lov er den tætte relation mellem $ID$ og $T$. Figur~\ref{fig:MacKenziePlot1} illustrerer, hvordan punkterne flader ud, ved lave værdier af $ID$, mens kurven beholder sit 1:1-forhold mellem $ID$ og $T$. Der er altså en usammenhæng mellem de observerede og forudsagte værdier, hvilket også er blevet observeret i flere andre studier som \cite{welford1960, buck1986, crossman1983, drury1975, klapp1975, langolf1976, meyer1988, wallace1978}\\
-Han fremhæver dog, at der er lavet en del studier af Fitts' lov, og at der er blevet præsenteret en del alternative formuleringer, som forsøger at få de faktiske data til at passe bedre til modellen. Specielt fremhæver han Welford's~\cite{welford1960,welford1968}, da den er udbredt som alternativ til Fitts' originale formulering. MacKenzie nævner den ekstreme lighed mellem Welford og Shannons formulering, og beskriver hvordan det for nyligt er blevet vist at Fitts' originale formulerings forhold mellem $A$ og $W$ havde baggrund i en approksimation af Shannon's sætning~\cite[p. 388]{fitts1954}. Dette giver selvfølgelig problemer, når der i Fitts' originale forsøg bliver brugt et forhold helt ned til 1:1 mellem A og W. MacKenzie foreslår, at man benytter sig af en form der minder meget om Welford's, men her er en direkte analogi til Shannon's formulering:
+Han fremhæver dog, at der er lavet en del studier af Fitts' lov, og at der er blevet præsenteret en del alternative formuleringer, som forsøger at få de faktiske data til at passe bedre til modellen. Specielt fremhæver han Welford's~\cite{welford1960,welford1968}, da den er udbredt som alternativ til Fitts' originale formulering. MacKenzie nævner den ekstreme lighed mellem Welford og Shannons formulering, og beskriver hvordan det for nyligt er blevet vist at Fitts' originale formulerings forhold mellem $A$ og $W$ havde baggrund i en approksimation af Shannon's sætning~\cite[p. 388]{fitts1954}. Dette mener MacKenzie kan give problemer, da der i Fitts' originale forsøg bliver brugt et forhold helt ned til 1:1 mellem A og W. MacKenzie foreslår, at man benytter sig af en form der minder meget om Welford's, men er her en direkte analogi til Shannon's formulering:
 \begin{align}
 \text{Shannon: }C=B\times&\log{\frac{S+N}{N}}\\
 \text{Welford: }MT=a+b\times&\log{\frac{A+0.5W}{W}}\\
