--- a/latex/main.tex
+++ b/latex/main.tex
@@ -220,11 +220,11 @@ Forskellen mellem Fitts' originale formulering og MacKenzie's bud på en ny form
 \begin{figure}[h]
 \centering
 \includegraphics[width=.5\linewidth]{images/illustrations/mackenzie_plot_2}
-\caption{Graf over $ID$ (y-akse) i forhold til $A$ (x-akse), med to linjer der viser en sammenligning af Fitts' og MacKenzies model ved fastholdt værdi af $W$.}
+\caption{Graf over $ID$ (y-akse) i forhold til $A$ (x-akse), med to linjer der viser en sammenligning af Fitts' og MacKenzies model ved fastholdt værdi af $W$}
 \label{fig:MacKenziePlot2}
 \end{figure}
 
-MacKenzie ser sin formulering som værende en mindre forbedring i forhold til Welford's, og mener ikke at man vil kunne se den store forskel mellem Welford's og hans egen formulering, medmindre man har at gøre med $ID$ som er under 3 bits. Han kommer frem til de 3 bits ved at se på figur~\ref{fig:MacKenziePlot2}, hvor det ses, at de to formuleringer for $ID$ er parallelle med hinanden, indtil omkring 3 bits eller derunder.\\
+MacKenzie ser sin formulering som værende en mindre forbedring i forhold til Welford's, og mener ikke, at man vil kunne se den store forskel mellem Welford's og hans egen formulering, medmindre man har at gøre med $ID$ som er under tre bits. Han kommer frem til de tre bits ved at se på figur~\ref{fig:MacKenziePlot2}, hvor, at de to formuleringer for $ID$ er parallelle med hinanden, indtil omkring tre bits eller derunder.
 
 Det generelle problem med MacKenzie's artikel er, at han ikke kommer med noget teoretisk grundlag for sin formulering, og derved ikke kan forklare hvorfor hans formulering er mere præcis end andres, eller hvorfor det netop er bedre med en direkte analogi til Shannon's i forhold til Welford's. I artiklen~\cite{drewes2010} bliver der stillet spørgsmålstegn ved dette. Men hvis man ser bort fra det manglende teoretiske grundlag, er MacKenzies formulering stadig en af de mest udbredte og brugte varianter af Fitt's lov, og har vist sig at passe godt på udførte forsøg~\cite{goldberg2015}.
 
