--- a/latex/main.tex
+++ b/latex/main.tex
@@ -216,7 +216,7 @@ Han fremhæver dog, at der er lavet en del studier af Fitts' lov, og at der er b
 \text{MacKenzie: }T&=a+b\cdot\log_2{\left(\frac{A+W}{W}\right)}
 \end{align}
 
-Forskellen mellem Fitts' originale formulering og MacKenzie's bud på en ny formulering bliver sammenlignet i figur~\ref{fig:MacKenziePlot2}, hvor det er tydeligt, at der ved lavere værdier af $A$ sker en udfladning af kurven, hvilket passer med datapunkterne i figur~\ref{fig:MacKenziePlot1}, jævnfør det første datapunkt, som ikke ligger på den affine linje.\\
+Forskellen mellem Fitts' originale formulering og MacKenzie's bud på en ny formulering bliver sammenlignet i figur~\ref{fig:MacKenziePlot2}, hvor det er tydeligt, at der ved lavere værdier af $A$ sker en udfladning af kurven, hvilket passer med datapunkterne i figur~\ref{fig:MacKenziePlot1}, jævnfør det første datapunkt, som ikke ligger på den affine linje.
 \begin{figure}[h]
 \centering
 \includegraphics[width=.5\linewidth]{images/illustrations/mackenzie_plot_2}
