--- a/latex/main.tex
+++ b/latex/main.tex
@@ -230,7 +230,7 @@ Det generelle problem med MacKenzie's artikel er, at han ikke kommer med noget t
 
 \addcontentsline{toc}{subsection}{Meyer's formulering}
 \subsection*{Meyer's formulering}
-Som beskrevet i forrige afsnit, baserer Fitts' lov sig på \emph{deterministic error-corrections} modellen. Meyer et al. foreslog en ny model, kaldet stochastic optimized-submovement modellen, som de baserede deres formel på \cite{meyer1988}. Som det ses af figur \ref{fig:MeyerTheory}, baserer denne model sig på, at personer laver en primær underbevægelse og derefter, hvis der er behov for det, en korrigerende underbevægelse. Udfra denne model kan den gennemsnitlige tid, $T$, forudsiges til at være
+Som beskrevet i forrige afsnit, baserer Fitts' lov sig på \emph{deterministic error-corrections} modellen. Meyer et al. foreslog en ny model, kaldet \textit{stochastic optimized-submovement modellen}, som de baserede deres formel på \cite{meyer1988}. Som det ses af figur \ref{fig:MeyerTheory}, baserer denne model sig på, at personer laver en primær underbevægelse og derefter, hvis der er behov for det, en korrigerende underbevægelse. Udfra denne model kan den gennemsnitlige tid, $T$, forudsiges til at være
 \begin{equation}
 \label{eq:meyer}
 T = a + b \sqrt{\frac{A}{W}}
