--- a/latex/main.tex
+++ b/latex/main.tex
@@ -239,7 +239,7 @@ T = a + b \sqrt{\frac{A}{W}}
 \begin{figure}[h]
 \centering
 \includegraphics[width=.5\linewidth]{images/illustrations/base_model_meyer}
-\caption{Stochastic optimized-submovement modellen - Den horisontale akse repræsenterer afstand og den vertikale akse repræsenterer bevægelseshastighed. De faste linjer repræsenterer primære underbevægelser, mens stiplede linjer er korrigerende underbevægelser. Bevægelserne tager udgangspunkt i en startende position (afstand = 0) og skal bevæge sig til et mål, med center i D og bredde W.}
+\caption{Stochastic optimized-submovement modellen - Den horisontale akse repræsenterer afstand og den vertikale akse repræsenterer bevægelseshastighed. De faste linjer repræsenterer primære underbevægelser, mens stiplede linjer er korrigerende underbevægelser. Bevægelserne tager udgangspunkt i en startende position (afstand = 0) og skal bevæge sig til et mål, med center i D og bredde W}
 \label{fig:MeyerTheory}
 \end{figure}
 
