--- a/latex/main.tex
+++ b/latex/main.tex
@@ -243,9 +243,9 @@ T = a + b \sqrt{\frac{A}{W}}
 \label{fig:MeyerTheory}
 \end{figure}
 
-Meyer et al. udfører et teoretisk og to praktiske forsøg. Hvor der i det teoretiske forsøg bliver gjort flere udregninger med forskellige værdier af A og W, som viser en god approksimation i forhold til Fitts' formulering. De praktiske forsøg gør brug af simplere motoriske opgaver end dem kendt fra Fitts' egne forsøg. Den eneste rummelige frihed i Meyers forsøg er håndledets rotation. Igennem hele artiklen benytter Meyer sig af, at en motorisk opgave er delt ind i én primær underbevægelse, og én korrigerende underbevægelser. Dette har dog ikke nogen betydning for sammenligningen med Fitts’ formulering, da den totale tid af alle underbevægelser vil approksimere den logaritmiske funktion af A/W, hvilket medfører at Fitts model også passer på modeller med iterative fejlkorrigerende underbevægelser.
+Meyer et al. udfører et teoretisk og to praktiske forsøg. Hvor der i det teoretiske forsøg bliver lavet flere udregninger med forskellige værdier af A og W, som viser en god approksimation i forhold til Fitts' formulering. De praktiske forsøg gør brug af simplere motoriske opgaver end dem kendt fra Fitts' egne forsøg. Den eneste rummelige frihed i Meyers forsøg er håndledets rotation. Igennem hele artiklen benytter Meyer sig af, at en motorisk opgave er delt ind i én primær underbevægelse, og én korrigerende underbevægelse. Dette har dog ikke nogen betydning for sammenligningen med Fitts’ formulering, da den totale tid af alle underbevægelser vil approksimere den logaritmiske funktion af A/W, hvilket medfører at Fitts' model også passer med én korrigerende underbevægelse.
 
-Graferne for funktionerne i ligning \ref{eq:meyer} og \ref{eq:FittsLov} vil udvise samme form. Grunden til dette er, at begge funktioner er monotont voksende, når $\frac{A}{W}$ bliver større. $\sqrt{\frac{A}{W}}$ vokser dog hurtigere end den tilsvarende logaritmiske funktion, hvilket kan ses af figur \ref{fig:log_vs_sqrt}. 
+Graferne for funktionerne i (\ref{eq:meyer}) og (\ref{eq:FittsLov}) vil udvise samme form. Grunden til dette er, at begge funktioner er monotont voksende, når $\frac{A}{W}$ bliver større. $\sqrt{\frac{A}{W}}$ vokser dog hurtigere end den tilsvarende logaritmiske funktion, hvilket kan ses af figur \ref{fig:log_vs_sqrt}. 
 
 \cite{goldberg2015} noterer dog, at der er nogle ulemper ved denne formel. Hvis testdeltageren når målet i en enkelt bevægelse, vil modellen følge en lineær udvikling i stedet for en eksponentiel udvikling. Dette passer ikke godt med observerede værdier. For en fast positiv værdi af $\frac{A}{W}$ vil Meyers formel gå mod $1$, når antallet af underbevægelser går mod uendelig.
 
