--- a/latex/main.tex
+++ b/latex/main.tex
@@ -252,7 +252,7 @@ Graferne for funktionerne i (\ref{eq:meyer}) og (\ref{eq:FittsLov}) vil udvise s
 \begin{figure}[h]
 \centering
 \includegraphics[width=.7\linewidth]{images/illustrations/meyer_plot_comparison}
-\caption{Graf over $x$ og $y$ ved et fastdefineret interval, der illustrerer udviklingen af funktionerne $y=log2(x)$ og $y=sqrt(x)$.}
+\caption{Graf over $x$ og $y$ ved et fastdefineret interval, der illustrerer udviklingen af funktionerne $y=log_2(x)$ og $y=sqrt(x)$}
 \label{fig:log_vs_sqrt}
 \end{figure}
 
