--- a/latex/main.tex
+++ b/latex/main.tex
@@ -256,6 +256,7 @@ Graferne for funktionerne i (\ref{eq:meyer}) og (\ref{eq:FittsLov}) vil udvise s
 \label{fig:log_vs_sqrt}
 \end{figure}
 
+\newpage
 \addcontentsline{toc}{section}{Sammenligning}
 \section*{Sammenligning}
 For at få en bedre forståelse af de fire formuleringer af Fitts' lov, vil vi i dette afsnit se på hvordan de matematisk ligner hinanden. Det første vi vil gøre er, at prøve at omformulere Welford's formulering, da den ikke indeholder et additivt $a$-led. 
