--- a/latex/main.tex
+++ b/latex/main.tex
@@ -270,7 +270,7 @@ T &= -K+K\cdot\log\left(\frac{2A+W}{W}\right)
 \end{align*}
 På trods af, at det er muligt at omskrive Welford's formulering, så vil det ikke være brugbart i praksis. Omformuleringen gør, at $-K$, er negativt, hvilket betyder, at tiden det tager at påbegynde en opgave er negativ. Vi vil derfor fremadrettet kun bruge Welford's formulering uden det additive led.
 
-Da vi har vist, at omskrivningen af Welford's formulering ikke giver logisk mening, vil vi nu kigge på de fire formuleringer, og vise, at de ikke er ens. Dette kan vi gøre ved at vælge en fast værdi for $A$ og $W$, for eksempel, $A = 5$ og $W = 1$. Hvis vi hertil finder ét punkt, hvor de to funktionsværdier er forskellige. Vi sætter $a=0$ og finder tiden i skæringen med $y$-aksen.
+Da vi har vist, at omskrivningen af Welford's formulering ikke giver logisk mening, vil vi nu kigge på de fire formuleringer, og vise, at de ikke er ens. Dette kan vi gøre ved at vælge en fast værdi for $A$ og $W$, for eksempel, $A = 5$ og $W = 1$. Hvis vi hertil finder ét punkt, hvor formuleringernes funktionsværdier er forskellige, har vi vist, at de ikke er ens. Vi sætter derfor $a=0$ og finder tiden, $T$, til skæringen med $y$-aksen.
 \begin{align*}
 \text{Fitts: } &T=b\cdot\log\left(\frac{2\cdot5}{2}\right)\\
 \text{Welford: } &T=k\cdot\log\left(\frac{5+0.5\cdot 2}{2}\right)\\
